kubernetes/ingress.yml
kind: Pod
apiVersion: v1
metadata:
  name: loss-app
  labels:
    app: loss
spec:
  containers:
    - name: loss-app
      image: is-this-loss
      imagePullPolicy: Never
---
kind: Service
apiVersion: v1
metadata:
  name: loss-service
spec:
  selector:
    app: loss
  ports:
    - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
    - name: bar-app
      image: 'kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /loss
            backend:
              service:
                name: loss-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /bar
            backend:
              service:
                name: bar-service
                port:
                  number: 8080
---
